# average

./: README.md  average.cabal
src/Data/Monoid/: Average.hs
tests/: Spec.hs
