
name:               average
version:            0.5
cabal-version:      >= 1.10
author:             Hans Hoglund
maintainer:         Hans Hoglund <hans@hanshoglund.se>
license:            BSD3
license-file:       COPYING
synopsis:           An average (arithmetic mean) monoid.
category:           
tested-with:        GHC
build-type:         Simple

description:
    Provides a simple monoid for calculating arithmetic means.

source-repository head
    type:               git
    location:           git://github.com/hanshoglund/average.git

library
    build-depends:
        base            >= 4 && < 5
    hs-source-dirs:     src
    default-language:   Haskell2010
    exposed-modules:
        Data.Monoid.Average

