
name:               average
version:            0.6
cabal-version:      >= 1.10
author:             Hans Hoglund
maintainer:         Hans Hoglund <hans@hanshoglund.se>
license:            BSD3
license-file:       COPYING
synopsis:           An average (arithmetic mean) monoid.
category:           
tested-with:        GHC
build-type:         Simple

description:
    Provides a monoid for calculating arithmetic means.

source-repository head
    type:               git
    location:           git://github.com/hanshoglund/average.git

library
    build-depends:
        base            >= 4 && < 5,
        vector-space    >= 0.8.7 && < 0.11,
        semigroups      >= 0.13.0.1 && < 1
    hs-source-dirs:     src
    default-language:   Haskell2010
    exposed-modules:
        Data.Monoid.Average

test-suite spec
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs:
          tests
    ghc-options: -Wall -rtsopts -O0
    build-depends:
        average,
        base            >= 4 && < 5,
        vector-space    >= 0.8.7 && < 0.11,
        semigroups      >= 0.13.0.1 && < 1,
        QuickCheck      >= 2 && < 3,
        hspec           >= 2.4 && < 2.5,
        hspec-checkers  >= 0.1 && < 0.2,
        checkers        >= 0.4 && < 0.5
